# ai-nintei-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_create_transcriptions.sql  002_create_organizations.sql  003_create_users.sql  004_add_org_to_transcriptions.sql  005_extend_organizations.sql  006_add_license_key.sql  007_change_email_unique_per_org.sql  008_add_name_fields.sql  009_add_save_settings.sql  010_make_text_nullable.sql  011_add_usage_counts.sql  012_add_stripe_fields.sql  013_add_metered_credits.sql  014_add_excel_downloaded_at.sql  015_add_is_first_login.sql  016_add_subscription_cancel_at.sql  017_add_audio_path.sql
backend/src/: auth.rs  claude.rs  db.rs  main.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/adminTool/: page.tsx
frontend/src/app/assess/: page.tsx
frontend/src/app/components/: AppHeader.tsx  FormatForm.tsx  HamburgerMenu.tsx  LogoutButton.tsx  PaymentSuccessBanner.tsx  PlanBanner.tsx  PlanLimitModal.tsx  RecordingContext.tsx  TopNav.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/licence/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/plan/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/staff/: page.tsx
frontend/src/app/start/: page.tsx
frontend/src/lib/: adminTool-auth.ts  auth.ts  excel.ts
(+6 files in other folders)
